# sustodian

./: CheckIncar.sh  FindMyFW.py  README.md  pyproject.toml  setup.py
.ipynb_checkpoints/: CheckIncar-checkpoint.sh  FindMyFW-checkpoint.py  FindMyFW-checkpoint.sh
shell_scripts/: CheckIncar.sh  FindMyFW.sh
shell_scripts/.ipynb_checkpoints/: CheckIncar-checkpoint.sh
src/sustodian/: CheckIncar.py  FindMyFW.py  __init__.py
src/sustodian.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/sustodian/.ipynb_checkpoints/: FindMyFW-checkpoint.py
