[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sustodian"
version = "0.1.0"
description = "A quality of life improvement for high throughput computing if you use Slurm, VASP, and Fireworks"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "wuz75", email = "waynezhao@berkeley.edu"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Environment :: Console",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/wuz75/sustodian"

[project.scripts]
checkincar = "sustodian.CheckIncar:main"
sjob = "sustodian.FindMyFW:main"
